force-app/main/default/objects/Product_Theme__c/Product_Theme__c.object-meta.xml
<CustomObject>
    <label>Product Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>