force-app/main/default/objects/Product_Theme__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(NOT(ISBLANK(Image_URL__c)), IMAGE(Image_URL__c, Name), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>