force-app/main/default/objects/Product_Theme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subtitle__c</columns>
    <columns>Active__c</columns>
    <columns>Display_order__c</columns>
    <columns>Image_URL__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>